--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -419,8 +419,26 @@
 		</ul>
 	</div>
 	
-	<div class="footer">
+	<div class="footer" id="contacts">
 		<div id="map_canvas"></div>
+		<div class="wrapper">
+			<div class="logo">
+				<a href="#">
+					<img src="img/logo.png" alt="">
+					<section>
+						<h1>AquaClean</h1>
+						<h2>Чистота с доставкой на дом</h2>
+					</section>
+				</a>
+			</div>
+			<address>
+				<ul>
+					<li>(099) <span>324 01 61</span></li>
+					<li>(067) <span>959 21 21</span></li>
+				</ul>
+			</address>
+			<button class="button green">Заказать</button>
+		</div>
 	</div>
 	<div class="shadow">
 		<form action="send.php" method="post">
