footer fix-release

--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>AquaClean</title>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <link href="css/lightbox.css" rel="stylesheet" />
   <link rel="shortcut icon" href="img/favicon.ico">
@@ -392,12 +393,16 @@
    <li><a href="img/gallery9.jpg" data-lightbox="image-1"><img src="img/gallery9.jpg" alt=""></a></li>
  </ul>
 </div>
-<div class="footer" id="contacts">
-  <h1>Контакты</h1>
+<div class="footer" >
+  <h1>Где работаем</h1>
   <div id="map_canvas"></div>
   <p>Выезд по Павлограду - бесплатный.<br>
-  За переделами города в радиусе большого круга - 2 грн/км.</p>
-  <div class="wrapper">
+  За переделами города в радиусе большого круга - 2 грн/км. <br>
+	(заказ от 1000грн выезд бесплатный)*
+  </p>
+  <h1>Контакты</h1>
+  <div class="wrapper" id="contacts">
+
    <div class="logo">
     <a href="#">
      <img src="img/logo.png" alt="">
@@ -412,10 +417,21 @@
    <li>(099) <span>324 01 61</span></li>
    <li>(067) <span>959 21 21</span></li>
  </ul>
+ 	<ul>
+ 		<li><a href="#">info@aquaclean.dp.ua</a></li>
+ 		<li>
+ 			<ul>
+ 				<li><a href="#"></a></li>
+ 				<li><a href="#"></a></li>
+ 				<li><a href="#"></a></li>
+ 			</ul>
+ 		</li>
+ 	</ul>
 </address>
 <button class="button green">Заказать</button>
 </div>
 </div>
+<div id="main"><button class="button green">Вверх</button></div>
 <div class="shadow">
   <form action="send.php" method="post">
    <span>Ваше имя:</span>
