--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -55,10 +55,10 @@
       </section>
       <div>
         <ul>
-          <li>Бесплатный выезд<br>на дом</li>
-          <li>Бонусная система<br>скидок</li>
-          <li>Гарантированный<br>результат</li>
-          <li>Работаем по<br>ГОСТ Р 51108-97</li>
+          <li><p>Бесплатный выезд<br>на дом</p></li>
+          <li><p>Бонусная система<br>скидок</p></li>
+          <li><p>Гарантированный<br>результат</p></li>
+          <li><p>Работаем по<br>ГОСТ Р 51108-97</p></li>
         </ul>
       </div>
       <div>
