--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -17,13 +17,12 @@
 <body>
   <nav class="top">
     <ul>
-      <li><a href="#why">Почему не чистить самому</a></li>
-      <li><a href="#garant">Гарантии результата</a></li>
+      <li><a href="#garant">Почему мы?</a></li>
       <li><a href="#how" style="display: none;">Как мы чистим</a></li>
       <li><a href="#comm">Отзывы</a></li>
       <li><a href="#question">Вопросы</a></li>
       <li><a href="#price">Цены</a></li>
-      <li class="active"><a href="#gallery">Результаты нашей работы</a></li>
+      <li class="active"><a href="#gallery">Примеры работ</a></li>
       <li><a href="#contacts">Контакты</a></li>
     </ul>
   </nav>
@@ -74,7 +73,6 @@
   </div>
   <div class="block-2">
     <div class="wrapper">
-      <h1>Зачем вам это нужно?</h1>
       <section class="list-col2 left">
         <h1>Стандартные загрязнения</h1>
         <div class="row">
@@ -150,53 +148,49 @@
 </div>
 </div>
 <div class="block-4" id="why">
-  <div class="wrapper">
-   <h1>Чистить самому — невыгодно!</h1>
-   <h2>Для того чтобы выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
-   <div class="fix">
-    <section>
-     <div class="img"><img src="img/icon-4-1.png" alt=""></div>
-     <h1>Оборудование:</h1>
-     <ul>
-      <li>Пылесос сухой уборки</li>
-      <li>Моющий пылесос</li>
-      <li>Парогенератор</li>
-      <li>
-       Ковромоечная машина <br>
-       (в случае очистки ковров)
-     </li>
-   </ul>
- </section>
- <section>
-   <div class="img"><img src="img/icon-4-2.png" alt=""></div>
-   <h1>Получить и потратить:</h1>
-   <ul>
-    <li>Немного знаний</li>
-    <li>
-     2-3 часа Вашего времени <br>
-     и упорного труда
-   </li>
- </ul>
-</section>
-</div>
-<div class="fix">
-  <section>
-   <div class="img"><img src="img/icon-4-3.png" alt=""></div>
-   <h1>Дорогостоящая химия:</h1>
-   <ul>
-    <li>Karcher</li>
-    <li>Chemspec</li>
-    <li>Amway</li>
-  </ul>
-</section>
-<section>
- <div class="img"><img src="img/icon-4-4.png" alt=""></div>
- <p>Советуем подумать о</p>
- <p>целесообразности</p>
- <p>вызова специалиста</p>
-</section>
-</div>
-</div>
+	<div class="wrapper">
+		<h1>Чистить самому — невыгодно!</h1>
+		<h2>Для того чтобы качественно выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
+		<div class="fix">
+			<section>
+				<div class="img"><img src="img/icon-4-1.png" alt=""></div>
+				<h1>Оборудование:</h1>
+				<ul>
+					<li>Пылесос сухой уборки</li>
+					<li>Моющий пылесос</li>
+					<li>Парогенератор</li>
+					<li>
+						Ковромоечная машина <br>
+						(в случае очистки ковров)
+					</li>
+				</ul>
+			</section>
+			<section>
+				<div class="img"><img src="img/icon-4-3.png" alt=""></div>
+				<h1>Дорогостоящая химия</h1>
+				<p>(Karcher, Chemspec, Amway)</p>
+				<p><span>	Вы рискуете </span>испортить ткань, неправильно подобранной химией</p>
+				<!--<ul>
+					<li>Karcher</li>
+					<li>Chemspec</li>
+					<li>Amway</li>
+				</ul>-->
+			</section>
+		</div>
+		<div class="fix">
+			<section>
+				<div class="img"><img src="img/icon-4-2.png" alt=""></div>
+				<h1>Потратить кучу <br>	 времени и сил</h1>
+			</section>
+			<section>
+				<div class="img"><img src="img/icon-4-4.png" alt=""></div>
+				<p>Советуем подумать о</p>
+				<p>целесообразности</p>
+				<p>вызова специалиста</p>
+			</section>
+		</div>
+		<button class="button blue">Бесплатная консультация</button>
+	</div>
 </div>
 <div class="block-6">
   <div class="wrapper">
@@ -216,7 +210,7 @@
     </div>
     <div class="block-7" id="garant">
       <div class="wrapper">
-       <h1>Преимущества и гарантии</h1>
+       <h1>Почему именно мы?</h1>
        <section class="list-col2 left">
         <div class="row">
          <div class="img"><img src="img/icon-7-1.png" alt=""></div>
@@ -284,6 +278,7 @@
      Идеально вычистили мне заднее сиденье авто, которое безрезультатно чистили три разных<br>"псевдохимчистки". Теперь только к Вам буду обращаться, и друзьям своим советовать!!!
    </p>
  </article>
+ <a href="https://vk.com/topic-56451376_28534820">Остальные отзывы можно посмотреть здесь</a>
 </div>
 </div>
 <div class="block-9" id="question">
@@ -299,11 +294,11 @@
   </article>
   <article>
     <p>Каким оборудованием производится химчистка?</p>
-    <p>При работе используется только профессиональное немецкое оборудование, которое способно выполнять глубокую очистку - ковров до основания, а мебельной обивки на глубину до 2 см!</p>
+    <p>При работе используется только профессиональное немецкое оборудование, которое способно выполнять глубокую очистку - ковров до основания, а мебельной обивки на глубину до 2,5 см!</p>
   </article>
   <article>
     <p>Где осуществляется химчистка? Можно ли привезти к вам?</p>
-    <p>Мягкая мебель чиститься исключительно на дому, а ковровые покрытия Вы можете привести по адресу ул.Днепровская 405 или вызвать специалиста на дом, доставка по городу АБСОЛЮТНО БЕСПЛАТНО (Ограничения по метражу 10м²) – Уточняйте с менеджером по телефону!</p>
+    <p>Мягкая мебель чиститься исключительно на дому, а ковровые покрытия мы можем забрать в наш цех абсолютно бесплатно, в любое удобное для Вас время. <br>Детали уточняйте с менеджером по телефону.</p>
   </article>
   <article>
     <p>Завтра ко мне приезжают гости (заезжают арендаторы) - успеет ли мебель высохнуть?</p>
@@ -313,6 +308,7 @@
     <p>Какие гарантии на работу Вы даете?</p>
     <p>Мы работаем согласно ГОСТу Р 51108-97, в случае недостижения результатов мы вернем Вам деньги в полном объеме. Так что риск исключен полностью!</p>
   </article>
+
 </div>
 </div>
 <div class="block-call">
@@ -380,7 +376,7 @@
 </div>
 </div>
 <div class="gallery" id="gallery">
-  <h1>Наши работы</h1>
+  <h1>Примеры работ</h1>
   <ul class="gallery">
    <li><a href="img/gallery1.jpg" data-lightbox="image-1"><img src="img/gallery1.jpg" alt=""></a></li>
    <li><a href="img/gallery2.jpg" data-lightbox="image-1"><img src="img/gallery2.jpg" alt=""></a></li>
@@ -397,39 +393,41 @@
   <h1>Где работаем</h1>
   <div id="map_canvas"></div>
   <p>Выезд по Павлограду - бесплатный.<br>
-  За переделами города в радиусе большого круга - 2 грн/км. <br>
+  За пределами города в радиусе большого круга - 2 грн/км. <br>
 	(заказ от 1000грн выезд бесплатный)*
   </p>
   <h1>Контакты</h1>
-  <div class="wrapper" id="contacts">
+  <div class="contacts">
+  	<div class="wrapper" id="contacts">
 
-   <div class="logo">
-    <a href="#">
-     <img src="img/logo.png" alt="">
-     <section>
-      <h1>AquaClean</h1>
-      <h2>Чистота с доставкой на дом</h2>
-    </section>
-  </a>
-</div>
-<address>
-  <ul>
-   <li>(099) <span>324 01 61</span></li>
-   <li>(067) <span>959 21 21</span></li>
- </ul>
- 	<ul>
- 		<li><a href="#">info@aquaclean.dp.ua</a></li>
- 		<li>
- 			<ul>
- 				<li><a href="#"></a></li>
- 				<li><a href="#"></a></li>
- 				<li><a href="#"></a></li>
- 			</ul>
- 		</li>
- 	</ul>
-</address>
-<button class="button green">Заказать</button>
-</div>
+  		<div class="logo">
+  			<a href="#">
+  				<img src="img/logo.png" alt="">
+  				<section>
+  					<h1>AquaClean</h1>
+  					<h2>Чистота с доставкой на дом</h2>
+  				</section>
+  			</a>
+  		</div>
+  		<address>
+  			<ul>
+  				<li>(099) <span>324 01 61</span></li>
+  				<li>(067) <span>959 21 21</span></li>
+  			</ul>
+  			<ul>
+  				<li><a href="#">info@aquaclean.dp.ua</a></li>
+  				<li>
+  					<ul>
+  						<li><a href="https://vk.com/pavlograd_clean"></a></li>
+  						<li><a href="https://twitter.com/AquaClean_Pvl"></a></li>
+  						<li><a href="http://www.odnoklassniki.ru/group/52467658195022"></a></li>
+  					</ul>
+  				</li>
+  			</ul>
+  		</address>
+  		<button class="button green">Заказать</button>
+  	</div>
+  </div>
 </div>
 <div id="main"><button class="button green">Вверх</button></div>
 <div class="shadow">
