--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -10,11 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script src="js/lightbox.min.js"></script>
-  <script src="js/rangeslider.min.js"></script>
-  <script src="js/script.js"></script>
+  
 </head>
 <body>
   <nav class="top">
@@ -451,13 +447,35 @@
   <div class="block-11">
   	<div class="wrapper">
   		<h1>Расчитайте стоимость химчистки Вашего ковра</h1>
-  		<p>Выберите ширину (м):</p>
-  		<input type="range" min="0" max="15" step="0.1" value="0">
-  		<span class="count"></span>
-  		<p>Выберите длину (м):</p>
-  		<input type="range" min="0" max="15" step="0.1" value="0">
-  		<span class="count"></span>
-  		<p>Стоимость стирки ковра <span class="price"></span> грн.</p>
+  		<div class="rangeCount">
+  			<p>Выберите ширину (м):</p>
+  			<div>
+  				<input type="range" min="1" max="15" step="0.1" value="3" data-rangeslider>
+  				<output id="width"></output>
+  			</div>
+  			<p>Выберите длину (м):</p>
+  			<div>
+  				<input type="range" min="1" max="15" step="0.1" value="4" data-rangeslider>
+  				<output id="long"></output>
+  			</div>
+  			<p>Стоимость стирки ковра <span class="price">1</span> грн.</p>
+  		</div>
+  		<div class="call">
+  			<form action="send.php" method="post">
+  				<span>Ваше имя:</span>
+  				<input type="text" name="name">
+  				<span>Номер телефона:</span>
+  				<input type="text" name="phone">
+  				<span>Время:</span>
+  				<p>
+  					Мы можем перезвонить Вам 
+  					с 9 до 18 по будням
+  				</p>
+  				<input type="submit" value="Заказать">
+  				<div class="cancel"></div>
+  			</form>
+  		</div>
+  		
   	</div>
   </div>
   <div class="program">
@@ -604,5 +622,11 @@
   		<div class="cancel"></div>
   	</form>
   </div>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="js/lightbox.min.js"></script>
+  <script src="js/rangeslider.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
