--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -201,27 +201,27 @@
   		<div class="howdo-list">
   			<li class="item1">
   				<span>1</span>
-  				<p>Аккуратно уберем пыль с поверхности сухим пылесосом;</p>
+  				<p>Тщательно пропылесосим и удалим крупный мусор (крошки, пыль, шерсть животных и т.д.);</p>
   			</li>
   			<li class="item2">
   				<span>2</span>
-  				<p>Нанесем экологически чистые средства на оббивку изделия для удаления грязи, микробов и сапрофитов;</p>
+  				<p>Замочим профессиональными чистящими средствами (Karcher, Chemspec);</p>
   			</li>
   			<li class="item3">
   				<span>3</span>
-  				<p>Точечно обработаем места с пятнами от крови, вина, кофе и др.</p>
+  				<p>Отдельно обработаем и устраним ярко выраженные пятна;</p>
   			</li>
   			<li class="item4">
   				<span>4</span>
-  				<p>Тщательно почистим  при помощи профессиональной немецкой техники, которая соберет всю грязь с оббивки Вашего изделия;</p>
+  				<p>Выполним обработку паром с механическим воздействием и дезинфицируем (уничтожая сапрофитов, бактерии и т.д.);</p>
   			</li>
   			<li class="item5">
   				<span>5</span>
-  				<p>Смоем чистой водой остатки химии с оббивки;</p>
+  				<p>Произведем глубокую общую чистку профессиональным оборудованием;</p>
   			</li>
   			<li class="item6">
   				<span>6</span>
-  				<p>Максимально высушим мебель от влаги, и менее чем через 3 часа, при комнатной температуре, она уже высохнет и будет готова к использованию.</p>
+  				<p>Промоем чистой водой остатки химических средств.</p>
   			</li>
   		</div>
   	</div>
@@ -458,7 +458,7 @@
   				<input type="range" min="1" max="15" step="0.1" value="4" data-rangeslider>
   				<output id="long"></output>
   			</div>
-  			<p>Стоимость стирки ковра <span class="price">1</span> грн.</p>
+  			<p>Стоимость химчистки <span class="price">1</span> грн.</p>
   		</div>
   		<div class="call">
   			<form action="send.php" method="post">
@@ -501,7 +501,7 @@
   				<img src="img/block-prog-ico3.png" alt="">
   				<p>
   					Подпиши друга по своей<br>
-  					карте и получи скидку в 100% <br>
+  					карте и получи бонус в 100% <br>
   					от суммы его заказа
   				</p>
   			</section>
@@ -628,5 +628,32 @@
   <script src="js/lightbox.min.js"></script>
   <script src="js/rangeslider.min.js"></script>
   <script src="js/script.js"></script>
+  <!— Yandex.Metrika counter —>
+  <script type="text/javascript">
+  	(function (d, w, c) {
+  		(w[c] = w[c] || []).push(function() {
+  			try {
+  				w.yaCounter27692553 = new Ya.Metrika({id:27692553,
+  					webvisor:true,
+  					clickmap:true,
+  					trackLinks:true,
+  					accurateTrackBounce:true});
+  			} catch(e) { }
+  		});
+
+  		var n = d.getElementsByTagName("script")[0],
+  		s = d.createElement("script"),
+  		f = function () { n.parentNode.insertBefore(s, n); };
+  		s.type = "text/javascript";
+  		s.async = true;
+  		s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+  		if (w.opera == "[object Opera]") {
+  			d.addEventListener("DOMContentLoaded", f, false);
+  		} else { f(); }
+  	})(document, window, "yandex_metrika_callbacks");
+  </script>
+  <noscript><div><img src="//mc.yandex.ru/watch/27692553" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!— /Yandex.Metrika counter —>
 </body>
 </html>
