--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -6,7 +6,8 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/rangeslider.css" rel="stylesheet">
   <link href="css/lightbox.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href="css/animate.min.css" rel="stylesheet" media="all">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -46,16 +47,16 @@
   </header>
   <div class="block-1">
     <div class="wrapper">
-      <section>
+      <section class="fadeInDown wow">
         <h1>Профессиональная химчистка ковров и мягкой мебели</h1>
         <h2>в Павлограде</h2>
       </section>
       <div>
         <ul>
-          <li><p>Бесплатный выезд<br>на дом</p></li>
-          <li><p>Бонусная система<br>скидок</p></li>
-          <li><p>Гарантированный<br>результат</p></li>
-          <li><p>Работаем по<br>ГОСТ Р 51108-97</p></li>
+          <li class="fadeInLeft wow" data-wow-delay=".5s"><p>Бесплатный выезд<br>на дом</p></li>
+          <li class="fadeInLeft wow" data-wow-delay=".5s"><p>Бонусная система<br>скидок</p></li>
+          <li class="fadeInRight wow" data-wow-delay=".5s"><p>Гарантированный<br>результат</p></li>
+          <li class="fadeInRight wow" data-wow-delay=".5s"><p>Работаем по<br>ГОСТ Р 51108-97</p></li>
         </ul>
       </div>
       <div>
@@ -65,14 +66,14 @@
       <div class="sofa">
         <div><img src="img/sofa-clean.jpg" alt=""></div>
         <div><img src="img/sofa-dirt.jpg" alt=""></div>
-        <div><img src="img/arrow.png" alt=""></div>
+        <div class="bounce wow" data-wow-delay="1.5s"><img src="img/arrow.png" alt=""></div>
       </div>
     </div>
   </div>
   <div class="block-2">
     <div class="wrapper">
-      <section class="list-col2 left">
-        <h1>Стандартные загрязнения</h1>
+      <section class="list-col2 left fadeInRight wow">
+        <h1 class="fadeInRight wow">Стандартные загрязнения</h1>
         <div class="row">
           <div class="img"><img src="img/icon-2-1.png" alt=""></div>
           <p>
@@ -94,8 +95,8 @@
           <p>Неприятный запах</p>
         </div>
       </section>
-      <section class="list-col2 right">
-        <h1>После химчистки</h1>
+      <section class="list-col2 right fadeInRight wow">
+        <h1 class="fadeInRight wow">После химчистки</h1>
         <div class="row">
           <div class="img"><img src="img/icon-2-4.png" alt=""></div>
           <p>
@@ -121,14 +122,14 @@
   </div>
   <div class="block-3">
     <div class="wrapper">
-      <h1>Целесообразность услуги на примере не большого дивана</h1>
-      <div>
+      <h1 class="fadeInLeft wow">Целесообразность услуги на примере не большого дивана</h1>
+      <div class="fadeIn wow" data-wow-delay=".5s">
         <h2>Покупка <span>(от 5000 грн)</span></h2>
         <ul class="plus">
           <li >Новая мебель - есть новая мебель, со всеми преимуществами, но стоит ли покупать новую мебель всякий раз, когда она запачкалась?</li>
         </ul>
       </div>
-      <div>
+      <div class="fadeIn wow" data-wow-delay="1s">
         <h2>Перетяжка <span>(от 2500 грн)</span></h2>
         <ul class="plus">
           <li>Вы получаете абсолютно новую обивку Вашему любимому дивану. Это оправдано, когда обивка повреждена физически (надрывы, прожоги)</li>
@@ -139,7 +140,7 @@
           <li>Отсутствие антибактериальной обработки.</li>
         </ul>
       </div>
-      <div>
+      <div class="fadeIn wow" data-wow-delay="1.5s">
         <h2>Химчистка <span>(от 400 грн)</span></h2>
         <ul class="plus">
           <li>Вы экономите свое время, не нужно ничего никуда везти. Мы приедем к Вам и произведем все работы на месте в течении 1-3 часов.</li>
@@ -155,8 +156,8 @@
   </div>
   <div class="block-4" id="why">
     <div class="wrapper">
-      <h1>Чистить самому — невыгодно!</h1>
-      <h2>Для того чтобы качественно выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
+      <h1 class="fadeInRight wow">Чистить самому — невыгодно!</h1>
+      <h2 class="fadeIn wow" data-wow-delay="1s">Для того чтобы качественно выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
       <div class="fix">
         <section>
           <div class="img"><img src="img/icon-4-1.png" alt=""></div>
@@ -190,34 +191,34 @@
           <p>вызова специалиста</p>
         </section>
       </div>
-      <button class="button blue">Бесплатная консультация</button>
+      <button class="button blue bounce wow" data-wow-delay="2s">Бесплатная консультация</button>
     </div>
   </div>
   <div class="block-5">
     <div class="wrapper">
-      <h1>Как мы чистим</h1>
+      <h1 class="fadeInLeft wow">Как мы чистим</h1>
       <div class="howdo-list">
-        <li class="item1">
+        <li class="item1 fadeIn wow" data-wow-delay=".2s">
           <span>1</span>
           <p>Тщательно пропылесосим и удалим крупный мусор (крошки, пыль, шерсть животных и т.д.);</p>
         </li>
-        <li class="item2">
+        <li class="item2 fadeIn wow" data-wow-delay=".4s">
           <span>2</span>
           <p>Замочим профессиональными чистящими средствами (Karcher, Chemspec);</p>
         </li>
-        <li class="item3">
+        <li class="item3 fadeIn wow" data-wow-delay=".6s">
           <span>3</span>
           <p>Отдельно обработаем и устраним ярко выраженные пятна;</p>
         </li>
-        <li class="item4">
+        <li class="item4 fadeIn wow" data-wow-delay=".8s">
           <span>4</span>
           <p>Выполним обработку паром с механическим воздействием и дезинфицируем (уничтожая сапрофитов, бактерии и т.д.);</p>
         </li>
-        <li class="item5">
+        <li class="item5 fadeIn wow" data-wow-delay="1s">
           <span>5</span>
           <p>Произведем глубокую общую чистку профессиональным оборудованием;</p>
         </li>
-        <li class="item6">
+        <li class="item6 fadeIn wow" data-wow-delay="1.2s">
           <span>6</span>
           <p>Промоем чистой водой остатки химических средств.</p>
         </li>
@@ -226,11 +227,11 @@
   </div>
   <div class="block-6">
     <div class="wrapper">
-      <h1>
+      <h1 class="fadeInLeft wow">
         Мы используем только экологически чистую,<br> 
         сертифицированную биохимию
       </h1>
-      <div>
+      <div class="fadeIn wow" data-wow-delay=".5s">
         <p>
           Во время работы мы используем исключительно  <br>
           антибактериальную, гипоаллергенную биохимию <br>
@@ -248,8 +249,8 @@
   </div>
   <div class="block-7" id="garant">
     <div class="wrapper">
-      <h1>Почему именно мы?</h1>
-      <section class="list-col2 left">
+      <h1 class="fadeInRight wow">Почему именно мы?</h1>
+      <section class="list-col2 left fadeIn wow" data-wow-delay=".5s">
         <div class="row">
           <div class="img"><img src="img/icon-7-1.png" alt=""></div>
           <p>
@@ -275,7 +276,7 @@
           </p>
         </div>
       </section>
-      <section class="list-col2 right">
+      <section class="list-col2 right fadeIn wow" data-wow-delay=".5s">
         <div class="row">
           <div class="img"><img src="img/icon-7-4.png" alt=""></div>
           <p>
@@ -297,13 +298,13 @@
           </p>
         </div>
       </section>
-      <div class="but"><button class="button blue">Вызвать специалиста</button></div>
+      <div class="but"><button class="button blue bounce wow" data-wow-delay="2s" >Вызвать специалиста</button></div>
     </div>
   </div>
   <div class="block-8" id="comm">
     <div class="wrapper">
-      <h1>Отзывы реальных людей</h1>
-      <article>
+      <h1 class="fadeInLeft wow">Отзывы реальных людей</h1>
+      <article class="fadeIn wow" data-wow-delay=".2s">
         <img src="img/icon-8-1.png" alt="">
         <p>Елена Завалина</p>
         <p>Ребята, лучшего сервиса, в нашем городе, Вы не найдете!!! <br>
@@ -314,14 +315,14 @@
           Пожалуй, никакие конкуренты - НЕ конкуренты Химчистке "AquaClean" в Павлограде!!! <br>
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay=".4s">
         <img src="img/icon-8-2.png" alt="">
         <p>Надежда Осокина</p>
         <p>
         Заказывали химчистку коврового покрытия и мягкой мебели(диван и 2 кресла).Заказ был выполнен на следующий день после звонка в удобное для нас время.Очень порадовало качество работы,компетентность исполнителя(молодой человек по имени Андрей),ПРИЯТНАЯ ЦЕНА!! При первой необходимости будем обращаться только к вам и рекомендовать всем знакомым! Процветания вам,постоянных клиентов и удачи в Новом году.Еще раз спасибо)
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay=".6s">
         <img src="img/icon-8-3.png" alt="">
         <p>Сергей Тюриков</p>
         <p>
@@ -334,38 +335,38 @@
   </div>
   <div class="block-9" id="question">
     <div class="wrapper">
-      <h1>Часто задаваемые вопросы</h1>
-      <article>
+      <h1 class="fadeInRight wow">Часто задаваемые вопросы</h1>
+      <article class="fadeIn wow" data-wow-delay=".2s">
         <p class="open">Точно ли отстираются все пятна и запахи?</p>
         <p>
           Мы даем гарантию на то, что приложим все усилия для очистки Вашего ковра от загрязнений любого рода. И при этом касательно конкретного загрязнения мы ничего не можем сказать, не зная его истории: как давно и каким образом пятно появилось, что уже делалось для его устранения и т.д. Не утруждайте себя поиском оптимального варианта выведения пятен. Их настолько много - клейкие, химические, растительные, животные – Вы можете положиться на наш опыт по пятновыведению – (удаляются до 95% пятен), и Ваш диван (ковер) будет очищен от столь надоевших и портящих настроение пятен с удивительной быстротой.
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay=".4s">
         <p>Безопасна ли такая химчистка для здоровья? Какие средства Вы используете?</p>
         <p>
           Здоровье Вашей семьи и домашних любимцев находится в полной БЕЗОПАСНОСТИ, так как для чистки используется профессиональная химия мировых производителей (Karcher, Amway, Chemspech), гарантирующих безопасность Вашего здоровья при использовании в жилых помещениях! Ваши родные смогут дышать чистым воздухом и забудут о пылевых клещах и аллергии надолго, а Вы сможете проявить любовь и заботу о здоровье своей семьи!
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay=".6s">
         <p>Каким оборудованием производится химчистка?</p>
         <p>
           При работе используется только профессиональное немецкое оборудование, которое способно выполнять глубокую очистку - ковров до основания, а мебельной обивки на глубину до 2,5 см!
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay=".8s">
         <p>Где осуществляется химчистка? Можно ли привезти к вам?</p>
         <p>
           Мягкая мебель чиститься исключительно на дому, а ковровые покрытия мы можем забрать в наш цех абсолютно бесплатно, в любое удобное для Вас время. <br>Детали уточняйте с менеджером по телефону.
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay="1s">
         <p>Завтра ко мне приезжают гости (заезжают арендаторы) - успеет ли мебель высохнуть?</p>
         <p>
           Уже на следующий день Вы сможете принимать гостей у себя, наслаждаясь общением с ними на чистом диване, потому что после чистки высыхание происходит в течение 12-24 часов!
         </p>
       </article>
-      <article>
+      <article class="fadeIn wow" data-wow-delay="1.2s">
         <p>Какие гарантии на работу Вы даете?</p>
         <p>
           Мы работаем согласно ГОСТу Р 51108-97, в случае недостижения результатов мы вернем Вам деньги в полном объеме. Так что риск исключен полностью!
@@ -375,7 +376,7 @@
   </div>
   <div class="block-call">
     <div class="wrapper">
-      <div>
+      <div class="fadeInLeft wow">
         <p>
           Все возникшие вопросы вы можете уточнить<br>
           у нашего менеджера по телефонам 
@@ -386,14 +387,14 @@
         </div>
       </div>
       <div>
-        <button class="button blue">оставить заявку</button>
+        <button class="button blue bounce wow" data-wow-delay="2s">оставить заявку</button>
       </div>
     </div>
   </div>
   <div class="block-10" id="price">
     <div class="wrapper">
-      <h1>Прайс лист</h1>
-      <div class="table">
+      <h1 class="fadeInRight wow">Прайс лист</h1>
+      <div class="table fadeIn wow" data-wow-delay=".5s">
         <div>
           <div class="title">Кресло</div>
           <div class="ico"></div>
@@ -441,8 +442,8 @@
   </div>
   <div class="block-11">
     <div class="wrapper">
-      <h1>Расчитайте стоимость химчистки Вашего ковра</h1>
-      <div class="rangeCount">
+      <h1 class="fadeInLeft wow">Расчитайте стоимость химчистки Вашего ковра</h1>
+      <div class="rangeCount fadeIn wow" data-wow-delay=".5s">
         <p>Выберите ширину (м):</p>
         <div>
           <input type="range" min="1" max="15" step="0.1" value="3" data-rangeslider>
@@ -455,7 +456,7 @@
         </div>
         <p>Стоимость химчистки <span class="price">1</span> грн.</p>
       </div>
-      <div class="call">
+      <div class="call fadeIn wow" data-wow-delay=".5s">
         <form action="send.php" method="post">
           <span>Ваше имя:</span>
           <input type="text" name="name">
@@ -475,8 +476,8 @@
   </div>
   <div class="program">
     <div class="wrapper">
-      <h1>Программа лояльности</h1>
-      <div>
+      <h1 class="fadeInRight wow">Программа лояльности</h1>
+      <div class="fadeIn wow" data-wow-delay=".5s">
         <section>
           <img src="img/block-prog-ico1.png" alt="">
           <p>
@@ -501,8 +502,8 @@
           </p>
         </section>
       </div>
-      <div class="table">
-        <div>
+      <div class="table fadeIn wow" data-wow-delay=".5s">
+        <div >
           <div class="title">Кресло</div>
           <div class="ico"></div>
           <div class="desc"></div>
@@ -548,8 +549,8 @@
     </div>
   </div>
   <div class="gallery" id="gallery">
-    <h1>Примеры работ</h1>
-    <ul class="gallery">
+    <h1 class="fadeInLeft wow">Примеры работ</h1>
+    <ul class="gallery fadeIn wow" data-wow-delay=".5s">
       <li><a href="img/gallery1.jpg" data-lightbox="image-1"><img src="img/gallery1.jpg" alt=""></a></li>
       <li><a href="img/gallery2.jpg" data-lightbox="image-1"><img src="img/gallery2.jpg" alt=""></a></li>
       <li><a href="img/gallery3.jpg" data-lightbox="image-1"><img src="img/gallery3.jpg" alt=""></a></li>
@@ -562,13 +563,13 @@
     </ul>
   </div>
   <div class="footer" >
-    <h1>Где работаем</h1>
-    <div id="map_canvas"></div>
+    <h1 class="fadeInRight wow">Где работаем</h1>
+    <div id="map_canvas" class="gallery fadeIn wow" data-wow-delay=".5s"></div>
     <p>Выезд по Павлограду - бесплатный.<br>
       За пределами города в радиусе большого круга - 3 грн/км. <br>
       (заказ от 1000грн выезд бесплатный)*
     </p>
-    <h1>Контакты</h1>
+    <h1 class="fadeInLeft wow">Контакты</h1>
     <div class="contacts">
       <div class="wrapper" id="contacts">
         <div class="logo">
@@ -596,11 +597,11 @@
             </li>
           </ul>
         </address>
-        <button class="button green">Заказать</button>
+        <button class="button green bounce wow" data-wow-delay="1s">Заказать</button>
       </div>
     </div>
   </div>
-  <div id="main"><button class="button green">Вверх</button></div>
+  <div id="main"><button class="button green ">Вверх</button></div>
   <div class="shadow">
     <form action="send.php" method="post">
       <span>Ваше имя:</span>
@@ -620,8 +621,10 @@
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="js/lightbox.min.js"></script>
   <script src="js/rangeslider.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>new WOW().init();</script>
   <script src="js/script.js"></script>
-  <!— Yandex.Metrika counter —>
+  <!-- Yandex.Metrika counter 
   <script type="text/javascript">
     (function (d, w, c) {
       (w[c] = w[c] || []).push(function() {
@@ -653,6 +656,6 @@
     ga('send', 'pageview');
   </script>
   <noscript><div><img src="//mc.yandex.ru/watch/27692553" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!— /Yandex.Metrika counter —>
+  Yandex.Metrika counter -->
 </body>
 </html>
