--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -624,7 +624,7 @@
   <script src="js/wow.min.js"></script>
   <script>new WOW().init();</script>
   <script src="js/script.js"></script>
-  <!-- Yandex.Metrika counter 
+  <!-- Yandex.Metrika counter--> 
   <script type="text/javascript">
     (function (d, w, c) {
       (w[c] = w[c] || []).push(function() {
@@ -656,6 +656,6 @@
     ga('send', 'pageview');
   </script>
   <noscript><div><img src="//mc.yandex.ru/watch/27692553" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  Yandex.Metrika counter -->
+  <!--Yandex.Metrika counter -->
 </body>
 </html>
