--- a/aquaclean/index.html
+++ b/aquaclean/index.html
@@ -477,7 +477,7 @@
   <div class="program">
     <div class="wrapper">
       <h1 class="fadeInRight wow">Программа лояльности</h1>
-      <div class="fadeIn wow" data-wow-delay=".5s">
+      <div class="fadeIn wow" -vendor-animation-delay: 1s;>
         <section>
           <img src="img/block-prog-ico1.png" alt="">
           <p>
@@ -502,7 +502,7 @@
           </p>
         </section>
       </div>
-      <div class="table fadeIn wow" data-wow-delay=".5s">
+      <div class="table fadeIn wow" -vendor-animation-delay: 2s;>
         <div >
           <div class="title">Кресло</div>
           <div class="ico"></div>
