--- a/profit/index.html
+++ b/profit/index.html
@@ -8,6 +8,7 @@
   <link href="css/animate.min.css" rel="stylesheet" media="all">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <section class="block-1">
