--- a/portfolioForJohn/index.html
+++ b/portfolioForJohn/index.html
@@ -5,6 +5,7 @@
 	<title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/lightGallery.css">
   <link rel="stylesheet" href="css/menu.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,300' rel='stylesheet' type='text/css'>
@@ -23,91 +24,109 @@
           <li><a href="#">Subscribe</a></li>
         </ul>
       </nav>
-			<div class="about">
-				<img src="img/avatar.png" alt="" class="avatar">
-				<h1>Alex Kobaev</h1>
-				<p>Photographer way upstream in search of beautiful landscapes!</p>
-			</div>
-		</header>
-		<div class="images">
-      <figure class="effect-ruby">
-        <img src="img/photos/img1.png" alt="img1">
+      <div class="about">
+        <img src="img/avatar.png" alt="" class="avatar">
+        <h1>Alex Kobaev</h1>
+        <p>Photographer way upstream in search of beautiful landscapes!</p>
+      </div>
+    </header>
+    <div class="images" id="light-gallery">
+      <figure data-src="img/photos/img1.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img1.png" alt="img1"></div>
         <a href="#">
           <figcaption>
-            <h2>Rocky <span>Meadows</span></h2>
-            <p>Scotland 2013</p>
+            <div>
+              <h2>Rocky <span>Meadows</span></h2>
+              <p>Scotland 2013</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img2.png" alt="img2">
+      <figure data-src="img/photos/img2.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img2.png" alt="img2"></div>
         <a href="#">
           <figcaption>
-            <h2>Sunlit <span>Way</span></h2>
-            <p>Norvegia 2014</p>
+            <div>
+              <h2>Sunlit <span>Way</span></h2>
+              <p>Norvegia 2014</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img3.png" alt="img3">
+      <figure data-src="img/photos/img3.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img3.png" alt="img3"></div>
         <a href="#">
           <figcaption>
-            <h2>Wild <span>Beach</span></h2>
-            <p>Norvegia 2014</p>
+            <div>
+              <h2>Wild <span>Beach</span></h2>
+              <p>Norvegia 2014</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img4.png" alt="img4">
+      <figure data-src="img/photos/img4.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img4.png" alt="img4"></div>
         <a href="#">
           <figcaption>
-            <h2>Mountain <span>Cream</span></h2>
-            <p>Austria 2014</p>
+            <div>
+              <h2>Mountain <span>Cream</span></h2>
+              <p>Austria 2014</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img5.png" alt="img5">
+      <figure data-src="img/photos/img5.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img5.png" alt="img5"></div>
         <a href="#">
           <figcaption>
-            <h2>Endless <span>River</span></h2>
-            <p>Finland 2014</p>
+            <div>
+              <h2>Endless <span>River</span></h2>
+              <p>Finland 2014</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img6.png" alt="img6">
+      <figure data-src="img/photos/img6.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img6.png" alt="img6"></div>
         <a href="#">
           <figcaption>
-            <h2>Red <span>Barn</span></h2>
-            <p>USA 2011</p>
+            <div>
+              <h2>Red <span>Barn</span></h2>
+              <p>USA 2011</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img7.png" alt="img7">
+      <figure data-src="img/photos/img7.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img7.png" alt="img7"></div>
         <a href="#">
           <figcaption>
-            <h2>Evening <span>Tide</span></h2>
-            <p>Portugal 2012</p>
+            <div>
+              <h2>Evening <span>Tide</span></h2>
+              <p>Portugal 2012</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img8.png" alt="img8">
+      <figure data-src="img/photos/img8.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img8.png" alt="img8"></div>
         <a href="#">
           <figcaption>
-            <h2>Green <span>Trees</span></h2>
-            <p>Canada 2015</p>
+            <div>
+              <h2>Green <span>Trees</span></h2>
+              <p>Canada 2015</p>
+            </div>
           </figcaption>
         </a>
       </figure>
-      <figure class="effect-ruby">
-        <img src="img/photos/img9.png" alt="img9">
+      <figure data-src="img/photos/img9.jpg" class="effect-ruby">
+        <div class="img"><img src="img/photos/img9.png" alt="img9"></div>
         <a href="#">
           <figcaption>
-            <h2>Old <span>Pier</span></h2>
-            <p>USA 2011</p>
+            <div>
+              <h2>Old <span>Pier</span></h2>
+              <p>USA 2011</p>
+            </div>
           </figcaption>
         </a>
       </figure>
@@ -140,6 +159,7 @@
   <script src="js/borderMenu.js"></script>
   <script src="js/modernizr.custom.js"></script>
   <script src="js/classie.js"></script>
+  <script src="js/lightGallery.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
